fixed image stretching

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,10 @@ body {
   
 }
 
+@media only screen and (max-width: 768px) {
+  .mc-banner { z-index: 9999 !important; }
+}
+
 a {
   color:black;
   text-decoration: none;
